--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
             </div>
         </section>
         <br>
+        <section id="separate"></section>
         <section id="about">
             <div class="container">
-                <div>
-                    <img src="IMG_20230211_212411.jpg" alt="profile picture" height="400px" width="450px">
+                <div class="about-box1">
+                    <img src="IMG_20230211_212411.jpg" alt="profile picture" height="300px" width="300px">
                 </div>
-                <div>
+                <div class="about-box2">
                     <h2>About Me</h2>
                     <p>I am Ganga Aravind,Currently pursuing Bachelor Of Technology in Electronics and Communication Engineering in Government College of Engineering.</p>
                     <button>Download CV</button>
